# text-tune

./: Dockerfile  README.md  TODO.txt  docker-compose.yaml  main.py  requirements.txt
electron-app/: README.md  electron-builder.yml  electron-types.d.ts  forge.config.ts  index.html  package-lock.json  package.json
electron-app/app/: index.html
electron-app/app/components/: App.tsx
electron-app/assets/: icon@2x.icns
electron-app/lib/frontend/: App.tsx  ChatGPTConfigManager.tsx  DeeplConfigManager.tsx  FixHistoryContainer.tsx  FixHistoryItem.tsx  Instructions.tsx  OllamaConfigManager.tsx  app-main.tsx  ipcEvents.ts
electron-app/lib/main/: app.ts  config.ts  deepl-fix.ts  main.ts  ollama-fix.ts  openai-fix.ts  secure-store.ts  types.ts
electron-app/src/: App.tsx  ConfigManager.tsx  FixHistory.tsx  app-main.tsx  config.ts  deepl-fix.ts  main.ts  ollama-fix.ts  preload.ts  renderer.ts  robot-helper.cjs  secure-store.ts
ml-service/: .dockerignore  .gitignore  .prettierrc.js  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
ml-service/models/: Modelfile
ml-service/prisma/: schema.prisma
ml-service/scripts/: download-model.ts
ml-service/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
python/: Dockerfile  README.md  pyproject.toml
python/src/: deepl_fix.py  local_ai.py  main.py
react-ui/: index.html  package-lock.json  package.json
react-ui/src/: App.tsx  ConfigManager.tsx  FixHistory.tsx  Instructions.tsx  main.tsx
tt-ai/: main.py  pyproject.toml
tt-ai/model/: handler.py
tt-ai/schemas/: __init__.py
(+56 files in other folders)
